# socket-dispatcher

./: .gitignore  ApplicationConfig.cpp  ApplicationConfig.h  CMakeLists.txt  InitSsl.cpp  InitSsl.h  README.md  ReceivedTcpSocketFactory.cpp  Socket.cpp  Socket.h  SocketFactory.h  SocketUtils.cpp  SocketUtils.h  SocketsList.h  SocketsPoller.cpp  SocketsPoller.h  SslSocket.cpp  SslSocket.h  TcpListenerSocketFactory.cpp  TcpSslConnectSocketFactory.cpp  TcpSslListenerSocketFactory.cpp  UnixListenerSocketFactory.cpp  UnixSocketFactory.cpp  myclnt.cpp  mydisp.cpp  mylsnr.cpp  utils.cpp  utils.h
.github/workflows/: cmake.yml  codeql.yml
scripts/: genkey.sh
